src/components/NavigationMenu/NavigationMenu.less
@import "~vtex-css-utils/less/_css-utils";

.NavigationMenu {
  position: fixed;
  overflow-y: auto;
  top: 0;
  z-index: 9999;
  width: 100%;
  height: 100%;
  background-color: @gray-soft;

  &__container {
    width: 100%;
    background-color: #373737;
    list-style-type: none;
    border-radius: 2px;
    padding: 0;
    margin-bottom: 0;
  }

  &__navbar {
    background: @gray-soft;
    border-bottom: 1px solid darken(#FFF, 25%);
    height: 40px;
    width: 100%;
  }

  &__navbar-button {
    .css-utils-clean-btn();
    background: url('http://i.imgur.com/Q8C5MZl.png') no-repeat;
    background-size: 11px auto;
    background-position: center center;
    padding: 20px;
  }

  &__header {
    color: #444;
    font-family: 'Helvetica Neue', Helvetica, sans-serif;
    font-weight: 400;
    margin: 45px 0px 30px 15px;
  }

  &__content {
    margin: 10px 0;
  }

  &-enter {
    opacity: 0;
    left: -300px;

    &.NavigationMenu-enter-active {
      opacity: 1;
      left: 0px;
      transition: opacity 150ms ease-in, left 200ms ease-in;
    }
  }

  &-leave {
    opacity: 1;
    left: 0px;

    &.NavigationMenu-leave-active {
      opacity: 0;
      left: -300px;
      transition: opacity 200ms ease-out, left 250ms ease-out;
    }
  }
}

